updated my index page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1621,6 +1621,7 @@ pre code {
   margin-right: auto;
   margin-left: auto;
   margin-top: 20px;
+  margin-bottom: ;
   background-color:skyblue;
 }
 @media (min-width: 768px) {
