--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,44 @@
   color: #EB4D4D;
   margin-bottom: 130px;
 }
+.active {
+  background-color: #f7f7f7;}
+  .active .player-name{ font-weight: 300}
+  .active .player-name::after{
+    content:"\2022";
+    color: #EB4D4D;
+    top: -7px;
+    right: 10px;
+  }
+  .player-current-box {
+  background-color: #EB4D4D;
+  color: #fff;
+  width: 80px;
+  margin: auto;
+  padding: 12px;
+  text-align: center;
+}
+.player-current-label{
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-size: 12px;
+  color: #222;
+}
+.player-current-score {
+  font-size: 30px;
+}
+button{
+  position: absolute;
+  width: 200px;
+  left: 50%;
+  transform: translate(-50%);
+  color: #555;
+  background: none;
+  border: none;
+  font-family: lato;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 300;
+  transition: background-color0.3s,color0.3s;
+}
