--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body{
 	 	border-bottom: 3px solid#999;
 	 	border-radius: 5px;
 	 	padding-bottom: 20px;
-	 }
+   }
 .player-0-panel,
 .player-1-panel{
   width: 50%;
@@ -29,7 +29,7 @@ body{
   margin-bottom: 10px
   position:relative;
 }
-.player-score{
+.die{
   text-align:center;
   font-size: 100px;
   font-weight: 100px;
@@ -48,7 +48,7 @@ body{
   }
   .player-current-box {
   width: 120px;
-  background-color: green;
+  background-color: purple;
   margin: auto;
   padding: 12px;
   text-align: center;
