added some designs to my page and readme

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body{
   }
   .player-current-box {
   width: 120px;
-  background-color: purple;
+  background-color: green;
   margin: auto;
   padding: 12px;
   text-align: center;
